- New decode options CorrectSaturated and ClipMode for the recovery of saturated colours in the highlights.
- New decode option EarlyWhiteBalance to perform white balance on the RAW lenslet image directly (reduce some colour artifacts).
- New ResampMethod option 'barycentric' from the ICCV2013 paper of Cho et al, "Modeling the calibration pipeline of the Lytro camera for high quality light-field image reconstruction".
- New ResampMethod option 'none' from ICCP2020 paper of Le Pendu and Smolic, "High Resolution Light Field Recovery with Fourier Disparity Layer Completion, Demosaicing, and Super-Resolution".

Misc improvements:
- LFWriteESLF: smarter jpeg file writing; reduces to 8-bit and strips weight channel as needed


---v0.5.1----------------------------------------------------------------------
Minor bug fixes and improvements

- LFWriteMetadata now supports writing of simple class objects
- LFGatherCamInfo uses unit_info.json on Lytro cameras that have it, fixes serial number mismatch for these cameras

---v0.5------------------------------------------------------------------------
Mostly reverse-compatible. White images and calibrations should be re-processed. See LFToolbox.pdf for details.

New Features :
- Linear refocus super-resolution via LFFiltShiftSum parameter UpsampRate, see LFDemoRefocusSuperres
- New display functions LFDispLawnmower, LFDispTiles, LFDispTilesSubfigs, LFDispProj, LFDispProjSubfigs
- LFReadESLF, LFWriteESLF: Read / write ESLF files
- LFDispMousePan verbose mode, InitialViewIdx parameter
- LFConvertToInt
- LFDisp: optional renormalize, weight channel output
- Contents.m: lists functions by category, type "help <LFToolbox folder name>"
- Updated sample pack v0.5, to match new decode; added ESLF example

Interface changes:
- LFDispVidCirc: parameters changed to allow finer control over animation

Bug Fixes :
- Calibration: correction to radial distortion model polynomial highest term; calibrations should be re-processed