@@ -111,6 +111,7 @@
 %                         .ClipMode : Clipping for highlights : 'hard', 'soft' or 'none'. The default is 'soft' if CorrectSaturated is true, and 'hard' otherwise.
 %                                     ClipMode='none' prevents clipping of highlights. To retain values above the saturation level in the output integer format,
 %                                     the light field data is divided by its maximum value before conversion to integers, and the maximum value is saved in metadata as MaxLum.
+%                  .HotPixelCorrect : Performs hot pixel correction using a list of hot pixels detected on the sensor (default=false).
 %
 %     RectOptions : struct controlling the optional rectification process
 %         .CalibrationDatabasePath  : Path to the calibration file database, as created by
